[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laddro-career"
version = "0.1.0"
description = "Python SDK for the Laddro Career API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Laddro", email = "support@laddro.com" }]
keywords = ["laddro", "career", "resume", "cover-letter", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://docs.laddro.com"
Repository = "https://github.com/laddro-app/laddro-career-sdk-python"
Documentation = "https://api.laddro.com/reference"

[tool.hatch.build.targets.wheel]
packages = ["src/laddro_career"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
